code generation of listOf components in constructed types