@@ -9,7 +9,7 @@ public class BMPStringType extends RestrictedCharacterStringType {
 
 	@Override
 	public Tag getUniversalTag() {
-        return new Tag(new Integer(30), TagClass.UNIVERSAL_TAG, null);
+        return new Tag(Integer.valueOf(30), TagClass.UNIVERSAL_TAG, null);
     }
     
 	@Override
