@@ -9,7 +9,7 @@ public class DateTimeType extends RestrictedCharacterStringType {
 
     @Override
 	public Tag getUniversalTag() {
-        return new Tag(new Integer(33), TagClass.UNIVERSAL_TAG, null);
+        return new Tag(Integer.valueOf(33), TagClass.UNIVERSAL_TAG, null);
     }
     
 	@Override
