@@ -9,7 +9,7 @@ public class EmbeddedPDVType extends Type {
 
     @Override
 	public Tag getUniversalTag() {
-        return new Tag(new Integer(11), TagClass.UNIVERSAL_TAG, null);
+        return new Tag(Integer.valueOf(11), TagClass.UNIVERSAL_TAG, null);
     }
     
 	@Override
