@@ -9,7 +9,7 @@ public class ExternalType extends Type {
 
     @Override
 	public Tag getUniversalTag() {
-        return new Tag(new Integer(8), TagClass.UNIVERSAL_TAG, null);
+        return new Tag(Integer.valueOf(8), TagClass.UNIVERSAL_TAG, null);
     }
     
 	@Override
