@@ -9,7 +9,7 @@ public class GeneralStringType extends RestrictedCharacterStringType {
 
 	@Override
 	public Tag getUniversalTag() {
-        return new Tag(new Integer(27), TagClass.UNIVERSAL_TAG, null);
+        return new Tag(Integer.valueOf(27), TagClass.UNIVERSAL_TAG, null);
     }
     
 	@Override
