@@ -9,7 +9,7 @@ public class GeneralizedTimeType extends RestrictedCharacterStringType {
 
     @Override
 	public Tag getUniversalTag() {
-        return new Tag(new Integer(24), TagClass.UNIVERSAL_TAG, null);
+        return new Tag(Integer.valueOf(24), TagClass.UNIVERSAL_TAG, null);
     }
     
 	@Override
