@@ -9,7 +9,7 @@ public class IA5StringType extends RestrictedCharacterStringType {
 
  	@Override
 	public Tag getUniversalTag() {
-        return new Tag(new Integer(22), TagClass.UNIVERSAL_TAG, null);
+        return new Tag(Integer.valueOf(22), TagClass.UNIVERSAL_TAG, null);
     }
     
 	@Override
