@@ -25,7 +25,7 @@ public class IntegerType extends Type {
 
     @Override
 	public Tag getUniversalTag() {
-        return new Tag(new Integer(2), TagClass.UNIVERSAL_TAG, null);
+        return new Tag(Integer.valueOf(2), TagClass.UNIVERSAL_TAG, null);
     }
     
 	@Override
