@@ -9,7 +9,7 @@ public class ObjectIdentifierType extends Type {
 
     @Override
 	public Tag getUniversalTag() {
-        return new Tag(new Integer(6), TagClass.UNIVERSAL_TAG, null);
+        return new Tag(Integer.valueOf(6), TagClass.UNIVERSAL_TAG, null);
     }
     
 	@Override
