@@ -9,7 +9,7 @@ public class RealType extends Type {
 
     @Override
 	public Tag getUniversalTag() {
-        return new Tag(new Integer(9), TagClass.UNIVERSAL_TAG, null);
+        return new Tag(Integer.valueOf(9), TagClass.UNIVERSAL_TAG, null);
     }
     
 	@Override
