@@ -8,7 +8,7 @@ public class RelativeIRIType extends Type {
 
     @Override
 	public Tag getUniversalTag() {
-        return new Tag(new Integer(36), TagClass.UNIVERSAL_TAG, null);
+        return new Tag(Integer.valueOf(36), TagClass.UNIVERSAL_TAG, null);
     }
     
 	@Override
