@@ -9,7 +9,7 @@ public class TeletexStringType extends RestrictedCharacterStringType {
 
 	@Override
 	public Tag getUniversalTag() {
-        return new Tag(new Integer(20), TagClass.UNIVERSAL_TAG, null);
+        return new Tag(Integer.valueOf(20), TagClass.UNIVERSAL_TAG, null);
     }
     
 	@Override
