@@ -8,7 +8,7 @@ public class TimeType extends RestrictedCharacterStringType {
 
     @Override
 	public Tag getUniversalTag() {
-        return new Tag(new Integer(14), TagClass.UNIVERSAL_TAG, null);
+        return new Tag(Integer.valueOf(14), TagClass.UNIVERSAL_TAG, null);
     }
     
 	@Override
