@@ -9,7 +9,7 @@ public class UTCTimeType extends RestrictedCharacterStringType {
 
     @Override
 	public Tag getUniversalTag() {
-        return new Tag(new Integer(23), TagClass.UNIVERSAL_TAG, null);
+        return new Tag(Integer.valueOf(23), TagClass.UNIVERSAL_TAG, null);
     }
     
 	@Override
