@@ -9,7 +9,7 @@ public class VisibleStringType extends RestrictedCharacterStringType {
 
 	@Override
 	public Tag getUniversalTag() {
-        return new Tag(new Integer(26), TagClass.UNIVERSAL_TAG, null);
+        return new Tag(Integer.valueOf(26), TagClass.UNIVERSAL_TAG, null);
     }
     
 	@Override
